--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -27,9 +27,8 @@
   <div class="place">
     <div class="place__name">À la française
       <div class="icon">
-        <div class="icon heart-fill">
-        </div>
-        <div class="icon heart-border">
+        <div class="icone_heart">
+          <i class="far fa-heart"></i>
         </div>
       </div>
     </div>
