heart le_delice_des_sens

--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -27,9 +27,8 @@
   <div class="place">
     <div class="place__name">Le délice des sens
       <div class="icon">
-        <div class="icon heart-fill">
-        </div>
-        <div class="icon heart-border">
+        <div class="icone_heart">
+          <i class="far fa-heart"></i>
         </div>
       </div>
     </div>
