--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
   
   <!-- Texte -->
   <section class="explore">
-    <h2>Réservez le menu qui vous convient</h2>
+    <h2><p>Réservez le menu qui vous convient</p></h2>
     <p>Découvrez des menus d'exceptions,<br/> séléctionnés par nos soins.</p>
     <div class="btn btn-explore"><a href="#restaurant">Explorez nos restaurants</a></div>
   </section>
   
   <!-- Fonctionnement -->
   <section class="function">
-    <h2>Fonctionnement</h2>
+    <h2><p>Fonctionnement</p></h2>
     <div class="function__card">
       <div class="function__card__number">
         1
@@ -91,7 +91,7 @@
   <!-- Restaurant -->
   
   <section class="restaurant">
-    <h2 id="restaurant">Restaurants</h2>
+    <h2><p> id="restaurant"Restaurants</p></h2>
     <div class="restaurant__choice">
       <div class="restaurant__card">
         <a href="palettes_du_gout.html">
