--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   
   <!-- Fonctionnement -->
   <section class="function">
-    <h1>Fonctionnement</h1>
+    <h2>Fonctionnement</h2>
     <div class="function__card">
       <div class="function__card__number">
         1
@@ -91,7 +91,7 @@
   <!-- Restaurant -->
   
   <section class="restaurant">
-    <h1 id="restaurant">Restaurants</h1>
+    <h2> id="restaurant">Restaurants</h2>
     <div class="restaurant__choice">
       <div class="restaurant__card">
         <a href="palettes_du_gout.html">
