--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <!-- Restaurant -->
   
   <section class="restaurant">
-    <h2> id="restaurant">Restaurants</h2>
+    <h2 id="restaurant">Restaurants</h2>
     <div class="restaurant__choice">
       <div class="restaurant__card">
         <a href="palettes_du_gout.html">
