--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!-- Texte -->
   <section class="explore">
     <h1>Réservez le menu qui vous convient</h1>
-    <p>Découvrez des menus d'exceptions,<br/> séléctionnés par nos soins.</p>
+    <p id="découvrez">Découvrez des menus d'exceptions,<br/> séléctionnés par nos soins.</p>
     <div class="btn btn-explore"><a href="#restaurant">Explorez nos restaurants</a></div>
   </section>
   
